ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-ingress
  namespace: devops-app

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
